@@ -40,6 +40,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 === API changes in 1.13 ===
 
 * Fixing main page display in meta=siteinfo
+* (bug 13128) Add patrolled flag to list=recentchanges
 
 === Languages updated in 1.13 ===
 
